// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing <Input/> component should match snapshot of Input after submit is clicked when inputs are provided 1`] = `
"<Fragment>
  <Form>
    <FormGroup as={{...}} className=\\"mb-3\\">
      <Col sm=\\"12\\">
        <FormControl id=\\"reminderName\\" value=\\"\\" type=\\"text\\" placeholder=\\"Reminder Name\\" onChange={[Function: onChange]} />
      </Col>
    </FormGroup>
    <FormGroup as={{...}} className=\\"mb-3\\">
      <Col sm=\\"12\\">
        <FormControl id=\\"reminderDesc\\" value=\\"\\" as=\\"textarea\\" placeholder=\\"Description\\" onChange={[Function: onChange]} />
      </Col>
    </FormGroup>
    <Col sm=\\"12\\">
      <Button type=\\"button\\" onClick={[Function: bound save]} variant=\\"primary\\" active={false} disabled={false}>
        Submit
      </Button>
    </Col>
  </Form>
</Fragment>"
`;

exports[`Testing <Input/> component should match snapshot of Input at initial state 1`] = `
"<Fragment>
  <Form>
    <FormGroup as={{...}} className=\\"mb-3\\">
      <Col sm=\\"12\\">
        <FormControl id=\\"reminderName\\" value=\\"\\" type=\\"text\\" placeholder=\\"Reminder Name\\" onChange={[Function: onChange]} />
      </Col>
    </FormGroup>
    <FormGroup as={{...}} className=\\"mb-3\\">
      <Col sm=\\"12\\">
        <FormControl id=\\"reminderDesc\\" value=\\"\\" as=\\"textarea\\" placeholder=\\"Description\\" onChange={[Function: onChange]} />
      </Col>
    </FormGroup>
    <Col sm=\\"12\\">
      <Button type=\\"button\\" onClick={[Function: bound save]} variant=\\"primary\\" active={false} disabled={false}>
        Submit
      </Button>
    </Col>
  </Form>
</Fragment>"
`;

exports[`Testing <Input/> component should match snapshot of Input when submit is clicked and no inputs are provided 1`] = `
"<Fragment>
  <Form>
    <FormGroup as={{...}} className=\\"mb-3\\">
      <Col sm=\\"12\\">
        <FormControl id=\\"reminderName\\" value=\\"\\" type=\\"text\\" placeholder=\\"Reminder Name\\" onChange={[Function: onChange]} />
      </Col>
    </FormGroup>
    <FormGroup as={{...}} className=\\"mb-3\\">
      <Col sm=\\"12\\">
        <FormControl id=\\"reminderDesc\\" value=\\"\\" as=\\"textarea\\" placeholder=\\"Description\\" onChange={[Function: onChange]} />
      </Col>
    </FormGroup>
    <Col sm=\\"12\\">
      <Button type=\\"button\\" onClick={[Function: bound save]} variant=\\"primary\\" active={false} disabled={false}>
        Submit
      </Button>
    </Col>
  </Form>
  <Alert variant=\\"danger\\" onClose={[Function: onClose]} dismissible={true} show={true} transition={{...}} closeLabel=\\"Close alert\\">
    <AlertHeading>
      Input Error
    </AlertHeading>
    <p>
      Inputs cannot be empty
    </p>
  </Alert>
</Fragment>"
`;
